Fix contact me z-index

--- a/css/ca-gallery.css
+++ b/css/ca-gallery.css
@@ -87,7 +87,7 @@ body {
     background: #222222;
     width: 80vw;
     right: -80vw;
-    z-index: 10;
+    z-index: 9999999;
     transition: all 0.3s ease;
     display: flex;
     flex-direction: column;
